--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,8 @@
 @import "./components/fonts.scss";
 @import "./components/container.scss";
 @import "./components/btn.scss";
+@import "./components/animations.scss";
+@import "./components/select.scss";
 
 @import "./sections/header.scss";
 @import "./sections/order-editing.scss";
